# python-project-83

./: .env  .gitignore  Makefile  README.md  database.sql  pyproject.toml  requirements.txt
.github/workflows/: page-analyzer-check.yml
page_analyzer/: app.py
page_analyzer/templates/: base.html  sites_table.html  start_page.html  urls.html
tests/: test_app.py
