[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["mym1chelle <timur.a.samusenko@mail.ru>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "3.11"
flask = "^2.2.2"
gunicorn = "^20.1.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
